2006-09-11  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/apt-worker.cc (update_package_cache): Call need_cache_init
	instead of cache_init so that the cache building happens in the
	background.  Return rescode_download_failed for any kind of
	failure.
	* src/main.cc (refresh_package_cache_reply): Show appropriate
	error message when result code is
	rescode_download_failed. (N36104)

	* src/util.h (show_updating): Added label parameter.
	(update_label): New, to store it.
	(refresh_updating_banner): Use it.
	* src/main.cc (search_packages): Show "searching" banner before
	calling backend.
	(search_packages_reply): Hide it. (N32375)

	* src/repo.h (parse_quoted_word): Added prototype.
	* src/main.cc (check_repositories, check_repositories_reply): New,
	to check whether any repositories are defined and enabled and
	either show the right info banner or call
	maybe_refresh_package_cache.  them.
	(make_install_applications_view, make_upgrade_applications_view):
	Use check_repositories instead of maybe_refresh_package_cache.
	(N30390, N33091)
	
	* src/util.cc (call_copy_cont): Replaced 'success' parameter with
	GnomeVFSResult.  Removed 'show_error' parameter.  Use "no
	connection" for ERROR_IO.  Updated all callers.
	(copy_progress): When completed, check for existence of file and
	fail with ERROR_IO if it is not there. (N30375)
	
	* src/util.cc (get_small_font): Added support to get the
	osso-SmallFont from the theme instead of a fixed font
	definition. It uses a fixed definition just in case the theme has
	not osso-SmallFont definition.
	(make_small_text_view): Modified the call to the get_small_font
	function.
	(make_small_label): Modified the call to the get_small_font
	function. (N32249)

	* src/main.h, src/main.cc (get_main_trail): New function, required
	to access the main_trail from other objects.
	* util.cc (global_package_list_key_pressed): Added, this function
	is a callback that controls the focus movement between the